[OE-4763] overflow bug fix

--- a/assets/css/admin.css
+++ b/assets/css/admin.css
@@ -90,6 +90,10 @@ li .queueset-admin {
 	float: right;
 }
 
+ul .queueset-item  {
+	overflow: hidden;
+}
+
 li.queueset-item .queueset-admin .admin-action:hover {
 	cursor:pointer;
 }
